kubernetes/app/django/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-auth-github
  namespace: crud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-auth-github
  template:
    metadata:
      labels:
        app: crud-auth-github
    spec:
      containers:
      - name: crud-auth-github
        image: piwero/crud_auth_github:1.0
        imagePullPolicy: Always
        command:
          - "sh"
          - "-c"
          - | 
            echo "Start crud-auth-github container"
            python manage.py migrate
            python manage.py runserver
        ports:
            - name: http
              containerPort: 8000
              protocol: TCP
            - name: http-metrics
              containerPort: 9797
              protocol: TCP
      volumes:
      - name: app-volume
        emptyDir: {}
