kubernetes/app/django/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: crud-auth-github-ingress
  namespace: crud-app
  annotations:
    ingress.kubernetes.io/protocol: http
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  routes:
    - match: Host(`crud.your-domain.com`) # Update this with your own domain
      kind: Rule
      middlewares: []
      services:
        - kind: Service
          name: crud-auth-github-service
          namespace: crud-app
          port: 8000
